Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -5,6 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>📡 Toolkit Fibra Óptica</title>
     <link rel="stylesheet" href="css/style.css" />
+    <style>
+        footer {
+            margin-top: 30px;
+            padding: 10px;
+            font-size: 0.9em;
+            color: #666;
+            text-align: center;
+            border-top: 1px solid #ddd;
+        }
+        footer a {
+            color: #333;
+            text-decoration: none;
+            font-weight: bold;
+        }
+        footer a:hover {
+            text-decoration: underline;
+        }
+    </style>
 </head>
 <body>
     <div class="container">
@@ -81,8 +99,12 @@
                 <button id="exportPDF">📥 Exportar PDF</button>
             </div>
         </section>
-    </div>
 
+        <footer>
+            <p>Pix: <strong>1de17b05-ff7e-4fc1-a003-022151caa5fe</strong> | Feito por Bruno Araujo</p>
+        </footer>
+    </div>
+    
     <script src="js/script.js"></script>
 </body>
 </html>
