Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>📡 Toolkit Fibra Óptica</title>
+    <title>📡 Calculadora de Fibra Óptica</title>
     <link rel="stylesheet" href="css/style.css" />
     <style>
         footer {
