Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -57,14 +57,14 @@
                 <label for="projectName">Nome do projeto 🏷️:</label>
                 <input type="text" id="projectName" name="projectName" placeholder="Ex: Projeto Alfa" />
 
-                <label for="cableNumber">Número do cabo 🔢:</label>
+                <label for="cableNumber">Lote do cabo 🔢:</label>
                 <input type="text" id="cableNumber" name="cableNumber" placeholder="Ex: Cabo 01" />
 
                 <label for="boxName">Nome da caixa 📦:</label>
                 <input type="text" id="boxName" name="boxName" placeholder="Ex: Caixa A" />
             </fieldset>
 
-            <button type="submit">🔍 Consultar Fibra</button>
+            <button type="submit">🔍 Pesquisar Fibra</button>
         </form>
 
         <section id="result" class="hidden">
