Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <label for="fiberNumber">Número da fibra 🎯:</label>
                 <input type="number" id="fiberNumber" name="fiberNumber" min="1" required />
 
-                <label for="cableType">Tipo do cabo (fibras) 📦:</label>
+                <label for="cableType">Tipo do cabo (Qtd. fibras) 📦:</label>
                 <select id="cableType" name="cableType" required>
                     <option value="12">12</option>
                     <option value="24">24</option>
