Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         </section>
 
         <footer>
-            <p>Pix chave aleatória:  <strong>1de17b05-ff7e-4fc1-a003-022151caa5fe</strong> | Feito por Bruno Araujo | Ajude quem te ajudou.</p>
+            <p>Pix chave aleatória:  <strong>1de17b05-ff7e-4fc1-a003-022151caa5fe</strong> | Feito por Bruno Araujo | Ajude quem te ajudou 👍🏼.</p>
         </footer>
     </div>
     
