Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>🛠️ Toolkit Fibra Óptica</h1>
+        <h1>🛠️ Calculadora de Fibra Óptica</h1>
 
         <form id="fibraForm">
             <fieldset>
