Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
         <section id="result" class="hidden">
             <h2>🎯 Resultado</h2>
-            <p><strong>Posição da fibra:</strong> <span id="fiberPosition"></span></p>
+            <p><strong>Posição da fibra no tubo:</strong> <span id="fiberPosition"></span></p>
             <p><strong>Cor da fibra:</strong> <span id="fiberColor"></span></p>
             <p><strong>Número da fibra:</strong> <span id="fiberNum"></span></p>
             <p><strong>Número do grupo:</strong> <span id="groupNumber"></span></p>
