--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <fieldset>
                 <legend>🧰 Dados da Fibra</legend>
 
-                <label for="fiberNumber">Digite o nunero da fibra que deseja pesquisar 🎯:</label>
+                <label for="fiberNumber">Digite o numero da fibra 🎯:</label>
                 <input type="number" id="fiberNumber" name="fiberNumber" min="1" required />
 
                 <label for="cableType">Tipo do cabo (Qtd. fibras) 📦:</label>
