Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     <option value="144">144</option>
                 </select>
 
-                <label for="fibersPerTube">Fibras por tubo 🧪:</label>
+                <label for="fibersPerTube">Fibras por tubo (6/12)🧪:</label>
                 <select id="fibersPerTube" name="fibersPerTube" required>
                     <option value="6">6</option>
                     <option value="12">12</option>
