Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 <input type="text" id="boxName" name="boxName" placeholder="Ex: Caixa A" />
             </fieldset>
 
-            <button type="submit">🔍 Pesquisar Fibra</button>
+            <button type="submit">🔍 Consultar Fibra</button>
         </form>
 
         <section id="result" class="hidden">
