Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 <legend>📝 Dados opcionais</legend>
 
                 <label for="projectName">Nome do projeto 🏷️:</label>
-                <input type="text" id="projectName" name="projectName" placeholder="Ex: Projeto Alfa" />
+                <input type="text" id="projectName" name="projectName" placeholder="Ex: Projeto Construção" />
 
                 <label for="cableNumber">Lote do cabo 🔢:</label>
                 <input type="text" id="cableNumber" name="cableNumber" placeholder="Ex: Cabo 01" />
@@ -95,8 +95,8 @@
             </table>
 
             <div class="buttons">
-                <button id="exportCSV">📥 Exportar CSV</button>
-                <button id="exportPDF">📥 Exportar PDF</button>
+                <button id="exportCSV">📥 Exportar para CSV</button>
+                <button id="exportPDF">📥 Exportar para PDF</button>
             </div>
         </section>
 
