Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             <p><strong>Cor:</strong> <span id="fiberColor"></span></p>
             <p><strong>Número da fibra:</strong> <span id="fiberNum"></span></p>
             <p><strong>Número do grupo:</strong> <span id="groupNumber"></span></p>
-            <p><strong>Cor do grupo:</strong> <span id="groupColor"></span></p>
+            <p><strong>Cor no grupo:</strong> <span id="groupColor"></span></p>
         </section>
 
         <section id="historySection">
