Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 <input type="text" id="projectName" name="projectName" placeholder="Ex: Projeto Construção" />
 
                 <label for="cableNumber">Lote do cabo 🔢:</label>
-                <input type="text" id="cableNumber" name="cableNumber" placeholder="Ex: Cabo 01" />
+                <input type="text" id="cableNumber" name="cableNumber" placeholder="Ex: 01" />
 
                 <label for="boxName">Nome da caixa 📦:</label>
                 <input type="text" id="boxName" name="boxName" placeholder="Ex: Caixa A" />
