--- a/index.html
+++ b/index.html
@@ -44,8 +44,11 @@
                     <option value="144">144</option>
                 </select>
 
-                <label for="fibersPerTube">Fibras por tubo (6/12)🧪:</label>
+                <label for="fibersPerTube">Fibras por tubo (de 2,3,4,6,12)🧪:</label>
                 <select id="fibersPerTube" name="fibersPerTube" required>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+                    <option value="4">4</option>
                     <option value="6">6</option>
                     <option value="12">12</option>
                 </select>
