Atualizar o index.html
adicionado 288 fibras

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
                     <option value="48">48</option>
                     <option value="72">72</option>
                     <option value="144">144</option>
+                    <option value="288">288</option>
                 </select>
 
                 <label for="fibersPerTube">Fibras por tubo (de 2,3,4,6,12)🧪:</label>
